# holotype

./: Cargo.toml  README.md
.github/workflows/: ci.yml  mirror.yml
src/: cli.rs  config.rs  decoder.rs  formatter.rs  generator.rs  lib.rs  main.rs  phonotactics.rs  pronounceability.rs
src/data/: mod.rs  morphemes.rs  prefixes.rs  roots.rs  suffixes.rs
tests/: integration_tests.rs
