[package]
name = "holotype"
version = "0.1.0"
authors = ["René Coignard <contact@renecoignard.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "Generate reproducible names for musical projects and patches"
homepage = "https://coignard.org/holotype"
repository = "https://github.com/coignard/holotype"
readme = "README.md"
keywords = ["cli"]
categories = ["command-line-utilities"]
exclude = [".github/*"]

[lib]
name = "holotype"
path = "src/lib.rs"

[[bin]]
name = "holotype"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
